--- a/src/main/resources/AfficherEvent.fxml
+++ b/src/main/resources/AfficherEvent.fxml
@@ -2,21 +2,22 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherEvent">
     <children>
         <ImageView fitHeight="600.0" fitWidth="800.0">
             <image>
-                <Image url="@image/modification des events.png" /> <!-- Assurez-vous d'avoir l'image correcte et le chemin correct -->
+                <Image url="@image/ListeEvent.png" /> <!-- Assurez-vous d'avoir l'image correcte et le chemin correct -->
             </image>
         </ImageView>
-        <ListView fx:id="listeEvents" layoutX="60.0" layoutY="118.0" prefHeight="312.0" prefWidth="651.0" />
+        <ListView fx:id="listeEvents" layoutX="264.0" layoutY="109.0" prefHeight="320.0" prefWidth="459.0" />
         <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" /> <!-- Vous pouvez ajouter d'autres éléments ici si nécessaire -->
-        <Button fx:id="boutonGerer" layoutX="81.0" layoutY="453.0" mnemonicParsing="false" text="Gerer" />
+        <Button fx:id="boutonGerer" layoutX="283.0" layoutY="462.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="154.0" text="Gerer les évènements" />
+      <Button layoutX="59.0" layoutY="103.0" mnemonicParsing="false" opacity="0.0" prefHeight="35.0" prefWidth="110.0" text="Gerer les espace" />
         <!-- Ajoutez d'autres boutons ou éléments au besoin -->
     </children>
 </AnchorPane>
