--- a/src/main/resources/AjouterEspace.fxml
+++ b/src/main/resources/AjouterEspace.fxml
@@ -7,12 +7,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterEspace">
     <!-- Définir le style du AnchorPane avec l'image en arrière-plan et le filtre de flou -->
@@ -26,67 +21,50 @@
     <children>
       <ImageView fitHeight="600.0" fitWidth="800.0" pickOnBounds="true">
          <image>
-            <Image url="@image/ajouts%20espace.png" />
+            <Image url="@image/AjoutEspace.png" />
          </image>
       </ImageView>
+         <ComboBox fx:id="cbEtat" layoutX="430.0" layoutY="261.0" prefHeight="26.0" prefWidth="103.0" />
 
-        <GridPane alignment="TOP_RIGHT" hgap="10" layoutX="49.0" layoutY="106.0" prefHeight="518.0" prefWidth="750.0" vgap="10">
+         <Label layoutX="294.0" layoutY="149.0" prefHeight="18.0" prefWidth="66.0" text="Nom :" textFill="#fff7f7">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
 
-            <columnConstraints>
-                <ColumnConstraints />
-                <ColumnConstraints maxWidth="144.80001220703124" minWidth="91.20003662109374" prefWidth="91.20003662109374" />
-                <ColumnConstraints maxWidth="564.5999633789063" minWidth="510.9999877929688" prefWidth="564.5999633789063" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints maxHeight="26.4" minHeight="0.0" prefHeight="0.0" />
-                <RowConstraints maxHeight="26.4" minHeight="0.0" prefHeight="26.4" />
-                <RowConstraints />
-                <RowConstraints />
-                <RowConstraints />
-            <RowConstraints />
-            </rowConstraints>
+         <Label layoutX="294.0" layoutY="206.0" text="Capacité :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
 
-            <Label prefHeight="18.0" prefWidth="66.0" text="Nom :" textFill="#fff7f7" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <TextField fx:id="txtNom" prefHeight="26.0" prefWidth="115.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-
-            <Label prefHeight="18.0" prefWidth="53.0" text="État :" GridPane.columnIndex="0" GridPane.rowIndex="2">
-            <textFill>
-               <LinearGradient endX="1.0" endY="1.0">
-                  <stops>
-                     <Stop>
-                        <color>
-                           <Color red="1.0" green="1.0" blue="1.0" />
-                        </color>
-                     </Stop>
-                     <Stop offset="0.006729475100942127">
-                        <color>
-                           <Color red="1.0" green="1.0" blue="1.0" />
-                        </color>
-                     </Stop>
-                     <Stop offset="1.0">
-                        <color>
-                           <Color red="1.0" green="1.0" blue="1.0" />
-                        </color>
-                     </Stop>
-                  </stops>
-               </LinearGradient>
-            </textFill></Label>
-            <ComboBox fx:id="cbEtat" prefHeight="26.0" prefWidth="92.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-
-            <Label text="Capacité :" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-            <TextField fx:id="txtCapacite" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-
-            <Label text="Description :" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-            <TextField fx:id="txtDescription" prefHeight="26.0" prefWidth="82.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-
-            <!-- Utiliser un style personnalisé pour le bouton d'ajout -->
-            <Button fx:id="btnAdd" onAction="#ajouterEspace" prefHeight="26.0" prefWidth="93.0" text="Ajouter" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-        </GridPane>
+         <!-- Utiliser un style personnalisé pour le bouton d'ajout -->
+         <Button fx:id="btnAdd" layoutX="474.0" layoutY="431.0" onAction="#ajouterEspace" prefHeight="26.0" prefWidth="103.0" text="Ajouter" />
+         <TextField fx:id="txtNom" layoutX="429.0" layoutY="145.0" prefHeight="26.0" prefWidth="103.0" />
 
               <!-- Utiliser un style personnalisé pour les labels d'erreur -->
         <Label fx:id="lblNomError" layoutX="26.0" layoutY="565.0" style="-fx-text-fill: red; -fx-font-weight: bold;" />
         <Label fx:id="lblCapaciteError" layoutX="26.0" layoutY="585.0" style="-fx-text-fill: red; -fx-font-weight: bold;" />
         <Label fx:id="lblDescriptionError" layoutX="26.0" layoutY="605.0" style="-fx-text-fill: red; -fx-font-weight: bold;" />
         <Label fx:id="lblEtatError" layoutX="26.0" layoutY="625.0" style="-fx-text-fill: red; -fx-font-weight: bold;" />
+         <TextField fx:id="txtDescription" layoutX="429.0" layoutY="326.0" prefHeight="70.0" prefWidth="234.0" />
+         <TextField fx:id="txtCapacite" layoutX="429.0" layoutY="201.0" prefHeight="26.0" prefWidth="103.0" />
+      <Button layoutX="474.0" layoutY="480.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="103.0" text="Liste Espaces" />
+      <Label layoutX="299.0" layoutY="265.0" prefHeight="18.0" prefWidth="36.0" text="Etat :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="299.0" layoutY="325.0" prefHeight="18.0" prefWidth="82.0" text="Descritpion :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="299.0" layoutY="484.0" prefHeight="18.0" prefWidth="172.0" text="Consultez la liste des espace :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Button layoutX="67.0" layoutY="167.0" mnemonicParsing="false" opacity="0.0" prefHeight="33.0" prefWidth="103.0" text="gerer les events" />
     </children>
 </AnchorPane>
