--- a/src/main/resources/AjouterEvent.fxml
+++ b/src/main/resources/AjouterEvent.fxml
@@ -16,7 +16,7 @@
     <!-- L'image d'arrière-plan -->
     <ImageView fitHeight="476.0" fitWidth="638.0">
         <image>
-            <Image url="@image/ajouts events.png" />
+            <Image url="@image/AjoutEvent.png" />
         </image>
     </ImageView>
 
@@ -29,38 +29,38 @@
         <VBox spacing="10.0" />
         <VBox spacing="10.0" />
         <VBox spacing="10.0" />
-         <Label prefHeight="18.0" prefWidth="42.0" text="Titre" textFill="WHITE">
-         <font>
-            <Font size="13.0" />
-         </font>
-      </Label>
         <VBox spacing="10.0" />
     </VBox>
-      <TextField fx:id="titleField" layoutX="206.0" layoutY="90.0" prefHeight="26.0" prefWidth="103.0" />
-      <DatePicker fx:id="datePicker" layoutX="206.0" layoutY="140.0" prefHeight="26.0" prefWidth="103.0" />
-      <TextField fx:id="nbrPersonneField" layoutX="206.0" layoutY="235.0" prefHeight="26.0" prefWidth="103.0" />
-      <TextField fx:id="descriptionField" layoutX="206.0" layoutY="279.0" prefHeight="26.0" prefWidth="103.0" />
-      <ComboBox fx:id="espaceComboBox" layoutX="206.0" layoutY="325.0" prefHeight="26.0" prefWidth="103.0">
+      <TextField fx:id="titleField" layoutX="364.0" layoutY="124.0" prefHeight="26.0" prefWidth="103.0" />
+      <DatePicker fx:id="datePicker" layoutX="364.0" layoutY="175.0" prefHeight="26.0" prefWidth="103.0" />
+      <TextField fx:id="nbrPersonneField" layoutX="361.0" layoutY="226.0" prefHeight="26.0" prefWidth="103.0" />
+      <TextField fx:id="descriptionField" layoutX="361.0" layoutY="272.0" prefHeight="26.0" prefWidth="103.0" />
+      <ComboBox fx:id="espaceComboBox" layoutX="361.0" layoutY="317.0" prefHeight="26.0" prefWidth="103.0">
                 <!-- Les noms d'espaces seront ajoutés dynamiquement -->
             </ComboBox>
-     <Button layoutX="217.0" layoutY="392.0" mnemonicParsing="false" onAction="#ajouterEvent" prefHeight="26.0" prefWidth="67.0" text="Ajouter" />
-      <Label layoutX="58.0" layoutY="329.0" text="Espace" textFill="#fffafa">
+     <Button layoutX="327.0" layoutY="381.0" mnemonicParsing="false" onAction="#ajouterEvent" prefHeight="26.0" prefWidth="67.0" text="Ajouter" />
+      <Label layoutX="231.0" layoutY="320.0" text="Espace" textFill="#fffafa">
       <font>
          <Font size="13.0" />
       </font>
    </Label>
-      <Label layoutX="57.0" layoutY="283.0" text="Description" textFill="WHITE">
+      <Label layoutX="226.0" layoutY="278.0" text="Description" textFill="WHITE">
       <font>
          <Font size="13.0" />
       </font>
    </Label>
-      <Label layoutX="60.0" layoutY="239.0" text="Nombre de personnes" textFill="#f2e5e5">
+      <Label layoutX="222.0" layoutY="227.0" text="Nombre de personnes" textFill="#f2e5e5">
       <font>
          <Font size="13.0" />
       </font>
    </Label>
 
-      <Label layoutX="62.0" layoutY="147.0" text="Date" textFill="#fffbfb">
+      <Label layoutX="226.0" layoutY="178.0" text="Date" textFill="#fffbfb">
+      <font>
+         <Font size="13.0" />
+      </font>
+   </Label>
+      <Label layoutX="229.0" layoutY="127.0" prefHeight="18.0" prefWidth="42.0" text="Titre" textFill="WHITE">
       <font>
          <Font size="13.0" />
       </font>
