--- a/src/main/resources/AjouterEspace.fxml
+++ b/src/main/resources/AjouterEspace.fxml
@@ -49,7 +49,7 @@
         <Label fx:id="lblEtatError" layoutX="26.0" layoutY="625.0" style="-fx-text-fill: red; -fx-font-weight: bold;" />
          <TextField fx:id="txtDescription" layoutX="429.0" layoutY="326.0" prefHeight="70.0" prefWidth="234.0" />
          <TextField fx:id="txtCapacite" layoutX="429.0" layoutY="201.0" prefHeight="26.0" prefWidth="103.0" />
-      <Button layoutX="474.0" layoutY="480.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="103.0" text="Liste Espaces" />
+        <Button layoutX="474.0" layoutY="480.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="103.0" text="Liste Espaces" onAction="#afficherListeEspaces" />
       <Label layoutX="299.0" layoutY="265.0" prefHeight="18.0" prefWidth="36.0" text="Etat :" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
