--- a/src/main/resources/AjouterEspace.fxml
+++ b/src/main/resources/AjouterEspace.fxml
@@ -65,6 +65,6 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Button layoutX="67.0" layoutY="167.0" mnemonicParsing="false" opacity="0.0" prefHeight="33.0" prefWidth="103.0" text="gerer les events" />
+        <Button layoutX="67.0" layoutY="167.0" mnemonicParsing="false" opacity="0.0" prefHeight="33.0" prefWidth="103.0" text="gerer les events" onAction="#gererEvenements" />
     </children>
 </AnchorPane>
