--- a/src/main/resources/AfficherEspace.fxml
+++ b/src/main/resources/AfficherEspace.fxml
@@ -32,14 +32,14 @@
                  </FXCollections>
              </items>
          </ComboBox>
-         <TextField fx:id="txtDescription" layoutX="377.0" layoutY="441.0" prefHeight="26.0" prefWidth="123.0" promptText="Description" />
+         <TextField fx:id="txtDescription" layoutX="377.0" layoutY="483.0" prefHeight="26.0" prefWidth="123.0" promptText="Description" />
 
-         <TextField fx:id="txtCapacite" layoutX="377.0" layoutY="484.0" prefHeight="26.0" prefWidth="123.0" promptText="Capacité" />
+         <TextField fx:id="txtCapacite" layoutX="377.0" layoutY="441.0" prefHeight="26.0" prefWidth="123.0" promptText="Capacité" />
         <Label fx:id="lblTitleError" layoutX="305.0" layoutY="362.0" prefHeight="18.0" prefWidth="86.0" />
 
             <ListView fx:id="listEspace" layoutX="257.0" layoutY="112.0" prefHeight="228.0" prefWidth="483.0" />
-      <Button layoutX="536.0" layoutY="510.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="123.0" text="ajouter un espace" onAction="#ajouterEspace"  />
-      <Button layoutX="64.0" layoutY="165.0" mnemonicParsing="false" opacity="0.0" prefHeight="35.0" prefWidth="106.0" text="gerer les events" onAction="#gererEvenements" />
+      <Button layoutX="536.0" layoutY="510.0" mnemonicParsing="false" onAction="#ajouterEspace" prefHeight="26.0" prefWidth="123.0" text="ajouter un espace" />
+      <Button layoutX="64.0" layoutY="165.0" mnemonicParsing="false" onAction="#gererEvenements" opacity="0.0" prefHeight="35.0" prefWidth="106.0" text="gerer les events" />
 
 
     </children>
