--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -14,9 +14,13 @@
                 <Image url="@image/listeParking.png" />
             </image>
         </ImageView>
-        <ListView fx:id="listeParkings" layoutX="60.0" layoutY="118.0" prefHeight="312.0" prefWidth="651.0" />
+        <!-- Bouton "Gérer les voitures" -->
+        <Button fx:id="boutonGererVoitures" layoutX="46.0" layoutY="97.0" mnemonicParsing="false" onAction="#ouvrirAffichervoiture" opacity="0.0" prefHeight="44.0" prefWidth="129.0" text="Gérer les voitures" />
+
+
+        <ListView fx:id="listeParkings" layoutX="269.0" layoutY="119.0" prefHeight="312.0" prefWidth="458.0" />
         <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" />
-        <Button fx:id="boutonAjouter" layoutX="81.0" layoutY="453.0" mnemonicParsing="false" text="Ajouter" />
+        <Button fx:id="boutonAjouter" layoutX="269.0" layoutY="456.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Ajouter" />
 
     </children>
 </AnchorPane>
