--- a/src/main/resources/AfficherVoitureAdmin.fxml
+++ b/src/main/resources/AfficherVoitureAdmin.fxml
@@ -2,11 +2,20 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherVoitureAdmin">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherVoitureAdmin">
     <children>
+      <ImageView fitHeight="600.0" fitWidth="800.0">
+         <image>
+            <Image url="@image/ListeVoiture.png" />
+         </image>
+      </ImageView>
+        <Button fx:id="boutonGererParking" layoutX="46.0" layoutY="160.0" mnemonicParsing="false" onAction="#ouvrirAfficherParkingAdmin" opacity="0.0" prefHeight="49.0" prefWidth="142.0" text="Gérer Parking" />
+
         <!-- Ajoutez une ListView pour afficher la liste des voitures -->
-        <ListView fx:id="listeVoitures" />
+        <ListView fx:id="listeVoitures" layoutX="328.0" layoutY="112.0" prefHeight="248.0" prefWidth="336.0" />
     </children>
 </AnchorPane>
