--- a/src/main/resources/AjouterParking.fxml
+++ b/src/main/resources/AjouterParking.fxml
@@ -1,30 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterParking">
     <children>
-        <Label layoutX="47.0" layoutY="50.0" text="Nom du parking :" />
-        <TextField fx:id="nomTextField" layoutX="156.0" layoutY="46.0" prefWidth="200.0" />
+        <ImageView fitHeight="600.0" fitWidth="800.0">
+            <image>
+                <Image url="@image/ajouterParking.png " />
+            </image>
+        </ImageView>
+        <Label layoutX="178.0" layoutY="163.0" text="Nom du parking :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
+        <TextField fx:id="nomTextField" layoutX="369.0" layoutY="161.0" prefHeight="25.0" prefWidth="174.0" />
 
-        <Label layoutX="47.0" layoutY="100.0" text="Capacité :" />
-        <TextField fx:id="capaciteTextField" layoutX="156.0" layoutY="96.0" prefWidth="200.0" />
+        <Label layoutX="178.0" layoutY="225.0" text="Capacité :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
+        <TextField fx:id="capaciteTextField" layoutX="369.0" layoutY="223.0" prefHeight="25.0" prefWidth="174.0" />
 
-        <Label layoutX="47.0" layoutY="150.0" text="Type :" />
-        <ComboBox fx:id="typeComboBox" layoutX="154.0" layoutY="146.0" prefWidth="200" />
+        <Label layoutX="178.0" layoutY="279.0" text="Type :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
+        <ComboBox fx:id="typeComboBox" layoutX="369.0" layoutY="277.0" prefHeight="25.0" prefWidth="174.0" />
 
-        <Label layoutX="47.0" layoutY="200.0" text="Nombre actuel de voitures :" />
-        <TextField fx:id="nombreActuellesTextField" layoutX="234.0" layoutY="196.0" prefWidth="120.0" />
+        <Label layoutX="178.0" layoutY="338.0" text="Nombre actuel de voitures :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
+        <TextField fx:id="nombreActuellesTextField" layoutX="369.0" layoutY="336.0" prefHeight="25.0" prefWidth="174.0" />
 
-        <HBox layoutX="47.0" layoutY="300.0" spacing="20.0">
-            <children>
-                <Button fx:id="boutonAjouter" mnemonicParsing="false" onAction="#ajouterParking" text="Ajouter" />
-            </children>
-        </HBox>
+        <HBox layoutX="47.0" layoutY="300.0" spacing="20.0" />
+          <Button fx:id="boutonAjouter" layoutX="294.0" layoutY="420.0" mnemonicParsing="false" onAction="#ajouterParking" prefHeight="25.0" prefWidth="120.0" text="Ajouter" />
+      <Accordion />
     </children>
 </AnchorPane>
