--- a/src/main/resources/AjouterVoiture.fxml
+++ b/src/main/resources/AjouterVoiture.fxml
@@ -1,23 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.HBox?>
-<AnchorPane prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controllers.AjouterVoiture">
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterVoiture">
     <children>
-        <HBox spacing="10" alignment="CENTER">
+      <ImageView fitHeight="600.0" fitWidth="800.0" >
+         <image>
+            <Image url="@image/Av.png" />
+         </image>
+      </ImageView>
+     <TextField fx:id="modeleField" layoutX="224.0" layoutY="178.0" promptText="Modèle" />
+     <TextField fx:id="couleurField" layoutX="224.0" layoutY="228.0" promptText="Couleur" />
+     <TextField fx:id="matriculeField" layoutX="224.0" layoutY="276.0" promptText="Matricule" />
+     <Button fx:id="ajouterButton" layoutX="207.0" layoutY="325.0" onAction="#handleAjouterButton" prefHeight="25.0" prefWidth="72.0" text="Ajouter" />
+     <Button fx:id="supprimerButton" disable="true" layoutX="318.0" layoutY="325.0" onAction="#handleSupprimerButton" text="Supprimer" />
 
-        <TextField fx:id="marqueField" layoutX="148.0" layoutY="61.0" promptText="Marque"/>
-        <TextField fx:id="modeleField" layoutX="148.0" layoutY="105.0" promptText="Modèle"/>
-        <TextField fx:id="couleurField" layoutX="148.0" layoutY="148.0" promptText="Couleur"/>
-        <TextField fx:id="matriculeField" layoutX="148.0" layoutY="193.0" promptText="Matricule"/>
-        <Button fx:id="ajouterButton" text="Ajouter" onAction="#handleAjouterButton" />
-        <Button fx:id="supprimerButton" text="Supprimer" onAction="#handleSupprimerButton" disable="true" />
-
-        </HBox>
+     <TextField fx:id="marqueField" layoutX="224.0" layoutY="124.0" promptText="Marque" />
+      <Label layoutX="112.0" layoutY="128.0" prefHeight="20.0" prefWidth="91.0" text="Marque :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="112.0" layoutY="182.0" prefHeight="20.0" prefWidth="91.0" text="Modèle :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="112.0" layoutY="232.0" prefHeight="20.0" prefWidth="91.0" text="Couleur :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="112.0" layoutY="280.0" prefHeight="20.0" prefWidth="91.0" text="Matricule :" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
 
     </children>
 </AnchorPane>
