--- a/src/main/resources/AfficherEspace.fxml
+++ b/src/main/resources/AfficherEspace.fxml
@@ -40,6 +40,7 @@
             <ListView fx:id="listEspace" layoutX="257.0" layoutY="112.0" prefHeight="228.0" prefWidth="483.0" />
       <Button layoutX="536.0" layoutY="510.0" mnemonicParsing="false" onAction="#ajouterEspace" prefHeight="26.0" prefWidth="123.0" text="ajouter un espace" />
       <Button layoutX="64.0" layoutY="165.0" mnemonicParsing="false" onAction="#gererEvenements" opacity="0.0" prefHeight="35.0" prefWidth="106.0" text="gerer les events" />
+        <Button fx:id="boutonPDF" layoutX="470.0" layoutY="462.0" mnemonicParsing="false" onAction="#genererPDF" prefHeight="26.0" prefWidth="110.0" text="Ouvrir PDF" />
 
 
     </children>
