--- a/src/main/resources/AjouterEspace.fxml
+++ b/src/main/resources/AjouterEspace.fxml
@@ -24,7 +24,7 @@
             <Image url="@image/AjoutEspace.png" />
          </image>
       </ImageView>
-         <ComboBox fx:id="cbEtat" layoutX="430.0" layoutY="261.0" prefHeight="26.0" prefWidth="103.0" />
+         <ComboBox fx:id="cbEtat" blendMode="SOFT_LIGHT" layoutX="430.0" layoutY="261.0" prefHeight="26.0" prefWidth="103.0" />
 
          <Label layoutX="294.0" layoutY="149.0" prefHeight="18.0" prefWidth="66.0" text="Nom :" textFill="#fff7f7">
          <font>
@@ -39,7 +39,7 @@
       </Label>
 
          <!-- Utiliser un style personnalisé pour le bouton d'ajout -->
-         <Button fx:id="btnAdd" layoutX="474.0" layoutY="431.0" onAction="#ajouterEspace" prefHeight="26.0" prefWidth="103.0" text="Ajouter" />
+         <Button fx:id="btnAdd" blendMode="HARD_LIGHT" layoutX="474.0" layoutY="431.0" onAction="#ajouterEspace" prefHeight="26.0" prefWidth="103.0" text="Ajouter" />
          <TextField fx:id="txtNom" layoutX="429.0" layoutY="145.0" prefHeight="26.0" prefWidth="103.0" />
 
               <!-- Utiliser un style personnalisé pour les labels d'erreur -->
@@ -49,7 +49,7 @@
         <Label fx:id="lblEtatError" layoutX="26.0" layoutY="625.0" style="-fx-text-fill: red; -fx-font-weight: bold;" />
          <TextField fx:id="txtDescription" layoutX="429.0" layoutY="326.0" prefHeight="70.0" prefWidth="234.0" />
          <TextField fx:id="txtCapacite" layoutX="429.0" layoutY="201.0" prefHeight="26.0" prefWidth="103.0" />
-        <Button layoutX="474.0" layoutY="480.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="103.0" text="Liste Espaces" onAction="#afficherListeEspaces" />
+        <Button blendMode="HARD_LIGHT" layoutX="474.0" layoutY="480.0" mnemonicParsing="false" onAction="#afficherListeEspaces" prefHeight="26.0" prefWidth="103.0" text="Liste Espaces" />
       <Label layoutX="299.0" layoutY="265.0" prefHeight="18.0" prefWidth="36.0" text="Etat :" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
@@ -65,6 +65,6 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-        <Button layoutX="67.0" layoutY="167.0" mnemonicParsing="false" opacity="0.0" prefHeight="33.0" prefWidth="103.0" text="gerer les events" onAction="#gererEvenements" />
+        <Button layoutX="67.0" layoutY="167.0" mnemonicParsing="false" onAction="#gererEvenements" opacity="0.0" prefHeight="33.0" prefWidth="103.0" text="gerer les events" />
     </children>
 </AnchorPane>
