--- a/src/main/resources/DetailsEvent.fxml
+++ b/src/main/resources/DetailsEvent.fxml
@@ -28,7 +28,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-        <Label layoutX="46.0" layoutY="236.0" text="Espace:" textFill="WHITE">
+        <Label layoutX="46.0" layoutY="238.0" text="Espace:" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
@@ -36,12 +36,12 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-        <TextField fx:id="textFieldTitre" layoutX="180.0" layoutY="96.0" prefHeight="26.0" prefWidth="106.0" />
-        <TextField fx:id="textFieldNbrPersonne" layoutX="180.0" layoutY="145.0" prefHeight="26.0" prefWidth="106.0" />
-        <ComboBox fx:id="comboBoxEspace" layoutX="180.0" layoutY="232.0" prefHeight="26.0" prefWidth="106.0" />
-        <TextField fx:id="textFieldDescription" layoutX="180.0" layoutY="278.0" prefHeight="26.0" prefWidth="106.0" />
-        <Button fx:id="boutonModifier" layoutX="288.0" layoutY="383.0" onAction="#modifierEvent" text="Modifier" />
-        <Button fx:id="boutonSupprimer" layoutX="194.0" layoutY="383.0" onAction="#supprimerEvent" text="Supprimer" />
-        <TextField fx:id="textFieldDate" layoutX="180.0" layoutY="188.0" prefHeight="26.0" prefWidth="106.0" />
+        <TextField fx:id="textFieldTitre" layoutX="194.0" layoutY="94.0" prefHeight="26.0" prefWidth="106.0" />
+        <TextField fx:id="textFieldNbrPersonne" layoutX="194.0" layoutY="144.0" prefHeight="26.0" prefWidth="106.0" />
+        <ComboBox fx:id="comboBoxEspace" blendMode="SOFT_LIGHT" layoutX="194.0" layoutY="232.0" prefHeight="26.0" prefWidth="106.0" />
+        <TextField fx:id="textFieldDescription" layoutX="194.0" layoutY="280.0" prefHeight="26.0" prefWidth="106.0" />
+        <Button fx:id="boutonModifier" blendMode="HARD_LIGHT" layoutX="412.0" layoutY="153.0" onAction="#modifierEvent" prefHeight="26.0" prefWidth="82.0" text="Modifier" />
+        <Button fx:id="boutonSupprimer" blendMode="HARD_LIGHT" layoutX="412.0" layoutY="219.0" onAction="#supprimerEvent" prefHeight="26.0" prefWidth="82.0" text="Supprimer" />
+        <TextField fx:id="textFieldDate" layoutX="194.0" layoutY="188.0" prefHeight="26.0" prefWidth="106.0" />
     </children>
 </AnchorPane>
