--- a/src/main/resources/AfficherEvent.fxml
+++ b/src/main/resources/AfficherEvent.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,10 +15,14 @@
                 <Image url="@image/ListeEvent.png" /> <!-- Assurez-vous d'avoir l'image correcte et le chemin correct -->
             </image>
         </ImageView>
-        <ListView fx:id="listeEvents" layoutX="264.0" layoutY="109.0" prefHeight="320.0" prefWidth="459.0" />
+        <ListView fx:id="listeEvents" layoutX="274.0" layoutY="154.0" prefHeight="320.0" prefWidth="459.0" />
         <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" /> <!-- Vous pouvez ajouter d'autres éléments ici si nécessaire -->
-        <Button fx:id="boutonGerer" blendMode="HARD_LIGHT" layoutX="283.0" layoutY="462.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="147.0" text="Gerer les évènements" />
+        <Button fx:id="boutonGerer" blendMode="HARD_LIGHT" layoutX="288.0" layoutY="501.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="147.0" text="Gerer les évènements" />
         <Button fx:id="boutonGererEspace" layoutX="59.0" layoutY="103.0" mnemonicParsing="false" onAction="#ouvrirAjouterEspace" opacity="0.0" prefHeight="35.0" prefWidth="110.0" text="Gerer les espaces " />
-        <Button fx:id="boutonPDF" blendMode="HARD_LIGHT" layoutX="461.0" layoutY="462.0" mnemonicParsing="false" onAction="#ouvrirPDFListeEvents" prefHeight="26.0" prefWidth="110.0" text="Ouvrir PDF" />
+        <Button fx:id="boutonPDF" blendMode="HARD_LIGHT" layoutX="477.0" layoutY="501.0" mnemonicParsing="false" onAction="#ouvrirPDFListeEvents" prefHeight="26.0" prefWidth="110.0" text=" PDF" />
+        <TextField fx:id="txtRechercheNom" layoutX="504.0" layoutY="120.0" prefHeight="26.0" prefWidth="138.0" promptText="Rechercher par nom" />
+        <Button layoutX="646.0" layoutY="121.0" onAction="#rechercherParNom" prefHeight="26.0" prefWidth="80.0" text="Rechercher" />
+        <Button layoutX="274.0" layoutY="121.0" onAction="#trierParNom" text="Trier par nom" />
+
     </children>
 </AnchorPane>
