--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -18,9 +19,10 @@
         <Button fx:id="boutonGererVoitures" layoutX="46.0" layoutY="97.0" mnemonicParsing="false" onAction="#ouvrirAffichervoiture" opacity="0.0" prefHeight="44.0" prefWidth="129.0" text="Gérer les voitures" />
 
 
-        <ListView fx:id="listeParkings" layoutX="269.0" layoutY="119.0" prefHeight="312.0" prefWidth="458.0" />
+        <ListView fx:id="listeParkings" layoutX="269.0" layoutY="160.0" prefHeight="312.0" prefWidth="458.0" />
         <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" />
-        <Button fx:id="boutonAjouter" layoutX="269.0" layoutY="456.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Ajouter" />
+        <Button fx:id="boutonAjouter" layoutX="269.0" layoutY="492.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Ajouter" />
+        <TextField fx:id="searchField" layoutX="578.0" layoutY="119.0" promptText="Rechercher..." />
 
     </children>
 </AnchorPane>
