--- a/src/main/resources/AfficherVoitureAdmin.fxml
+++ b/src/main/resources/AfficherVoitureAdmin.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,6 +17,8 @@
         <Button fx:id="boutonGererParking" layoutX="46.0" layoutY="160.0" mnemonicParsing="false" onAction="#ouvrirAfficherParkingAdmin" opacity="0.0" prefHeight="49.0" prefWidth="142.0" text="Gérer Parking" />
 
         <!-- Ajoutez une ListView pour afficher la liste des voitures -->
-        <ListView fx:id="listeVoitures" layoutX="291.0" layoutY="112.0" prefHeight="416.0" prefWidth="417.0" />
+        <ListView fx:id="listeVoitures" layoutX="291.0" layoutY="166.0" prefHeight="358.0" prefWidth="417.0" />
+        <TextField fx:id="searchField" layoutX="559.0" layoutY="126.0" promptText="Rechercher..." />
+
     </children>
 </AnchorPane>
