--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -10,19 +10,26 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherParking">
     <children>
+        <!-- Image de fond -->
         <ImageView fitHeight="600.0" fitWidth="800.0">
             <image>
                 <Image url="@image/listeParking.png" />
             </image>
         </ImageView>
+
         <!-- Bouton "Gérer les voitures" -->
         <Button fx:id="boutonGererVoitures" layoutX="46.0" layoutY="97.0" mnemonicParsing="false" onAction="#ouvrirAffichervoiture" opacity="0.0" prefHeight="44.0" prefWidth="129.0" text="Gérer les voitures" />
 
-
+        <!-- Liste des parkings -->
         <ListView fx:id="listeParkings" layoutX="269.0" layoutY="160.0" prefHeight="312.0" prefWidth="458.0" />
-        <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" />
-        <Button fx:id="boutonAjouter" layoutX="269.0" layoutY="492.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Ajouter" />
+
+        <!-- Zone de recherche -->
         <TextField fx:id="searchField" layoutX="578.0" layoutY="119.0" promptText="Rechercher..." />
 
+        <!-- Bouton "Ajouter" -->
+        <Button fx:id="boutonAjouter" layoutX="269.0" layoutY="492.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Ajouter" />
+
+        <!-- Margeur pour HBox -->
+        <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" />
     </children>
 </AnchorPane>
