--- a/src/main/resources/AfficherVoitureAdmin.fxml
+++ b/src/main/resources/AfficherVoitureAdmin.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.control.Label?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherVoitureAdmin">
     <children>
       <ImageView fitHeight="600.0" fitWidth="800.0">
