--- a/src/main/resources/AjouterVoiture.fxml
+++ b/src/main/resources/AjouterVoiture.fxml
@@ -6,22 +6,24 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterVoiture">
     <children>
-      <ImageView fitHeight="600.0" fitWidth="800.0" >
+      <ImageView fitHeight="600.0" fitWidth="800.0">
          <image>
             <Image url="@image/Av.png" />
          </image>
       </ImageView>
-     <TextField fx:id="modeleField" layoutX="224.0" layoutY="178.0" promptText="Modèle" />
+
+        <TextField fx:id="marqueField" layoutX="224.0" layoutY="124.0" promptText="Marque" />
+        <TextField fx:id="modeleField" layoutX="224.0" layoutY="178.0" promptText="Modèle" />
      <TextField fx:id="couleurField" layoutX="224.0" layoutY="228.0" promptText="Couleur" />
      <TextField fx:id="matriculeField" layoutX="224.0" layoutY="276.0" promptText="Matricule" />
      <Button fx:id="ajouterButton" layoutX="207.0" layoutY="325.0" onAction="#handleAjouterButton" prefHeight="25.0" prefWidth="72.0" text="Ajouter" />
      <Button fx:id="supprimerButton" disable="true" layoutX="318.0" layoutY="325.0" onAction="#handleSupprimerButton" text="Supprimer" />
-
-     <TextField fx:id="marqueField" layoutX="224.0" layoutY="124.0" promptText="Marque" />
       <Label layoutX="112.0" layoutY="128.0" prefHeight="20.0" prefWidth="91.0" text="Marque :" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -42,6 +44,8 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-
+        <VBox alignment="CENTER" spacing="10">
+            <HBox alignment="CENTER" spacing="10" />
+        </VBox>
     </children>
 </AnchorPane>
