--- a/src/main/resources/ListeDiscussion.fxml
+++ b/src/main/resources/ListeDiscussion.fxml
@@ -3,24 +3,37 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="621.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ListeDiscussion">
+<VBox styleClass="back" prefHeight="513.0" prefWidth="614.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ListeDiscussion">
    <children>
-      <Text layoutX="203.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Listes des discussions ">
-         <font>
-            <Font size="22.0" />
-         </font>
-      </Text>
-      <TableView fx:id="table" layoutX="43.0" layoutY="73.0" prefHeight="329.0" prefWidth="540.0">
-        <columns>
-          <TableColumn fx:id="titre" prefWidth="217.0" text="Titre" />
-          <TableColumn fx:id="createur" prefWidth="173.0" text="Createur" />
-            <TableColumn fx:id="dateCreation" prefWidth="149.0" text="Date de Creation" />
-        </columns>
-      </TableView>
-      <Button layoutX="463.0" layoutY="402.0" mnemonicParsing="false" onAction="#redirectToAjout" text="Ajouter une discussion" />
+      <StackPane prefHeight="150.0" prefWidth="200.0">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Listes des discussions ">
+               <font>
+                  <Font name="System Bold Italic" size="28.0" />
+               </font>
+            </Text>
+         </children>
+      </StackPane>
+      <StackPane prefHeight="215.0" prefWidth="588.0">
+         <children>
+            <TableView fx:id="table" prefHeight="394.0" prefWidth="529.0" styleClass="table">
+               <columns>
+                  <TableColumn fx:id="titre" prefWidth="241.0" text="Titre" />
+                  <TableColumn fx:id="createur" prefWidth="187.0" text="Createur" />
+                  <TableColumn fx:id="dateCreation" prefWidth="185.0" text="Date de Creation" />
+               </columns>
+            </TableView>
+         </children>
+      </StackPane>
+      <StackPane prefHeight="150.0" prefWidth="200.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#redirectToAjout" text="Ajouter une discussion" />
+         </children>
+      </StackPane>
    </children>
-</AnchorPane>
+</VBox>
